--- a/src/data.yaml
+++ b/src/data.yaml
@@ -97,6 +97,7 @@ members:
     img: jana-kubatova.webp
     refs:
       twitter: DivergentsNFT
+      linkedin: jana-kub%C3%A1tov%C3%A1-745057b9
 
 #  - id: mario-havel
 #    name: Mario Havel
