--- a/src/data.yaml
+++ b/src/data.yaml
@@ -708,7 +708,7 @@ opportunities:
     text: Support czech nonprofit projects
 
   - project: unchained-brno
-    link: https://onchainbrno.com/
+    link: https://t.me/UnchainedBrno
     text: Organise your own event
 
   - project: bluesky-cesko
